# gitpad

./: .dockerignore  .env-sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  crates.js  index.html  robots.txt  search-index.js  search_index.en.js  settings.html  sitemap.xml  source-files.js  sqlx-data.json
.github/workflows/: coverage.yml  linux.yml
config/: default.toml
database/db-core/: Cargo.toml
database/db-core/src/: errors.rs  lib.rs  ops.rs  tests.rs
database/db-sqlx-postgres/: Cargo.toml  sqlx-data.json
database/db-sqlx-postgres/migrations/: 20211017084123_admin_users.sql  20220213111215_gists_users.sql  20220213112330_gists_gists.sql  20220214072325_gists_gists_comments_views.sql
database/db-sqlx-postgres/src/: errors.rs  lib.rs  tests.rs
database/db-sqlx-sqlite/: Cargo.toml  sqlx-data.json
database/db-sqlx-sqlite/migrations/: 20211019074149_admin_users.sql  20220213111519_gists_users.sql  20220213113228_gists_gists.sql  20220214091158_gists_gists_comments_views.sql
database/db-sqlx-sqlite/src/: errors.rs  lib.rs  tests.rs
database/migrator/: Cargo.toml
database/migrator/src/: main.rs
db_core/: all.html  enum.GistPrivacy.html  enum.GistVisibility.html  index.html  sidebar-items.js  struct.CreateGist.html  struct.CreateGistComment.html  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Gist.html  struct.GistComment.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.CloneGPDatabse.html  trait.CloneGistDatabase.html  trait.GPDatabse.html  trait.GistDatabase.html
db_core/dev/: attr.async_trait.html  index.html
db_core/errors/: enum.DBError.html  index.html  type.BoxDynError.html  type.DBResult.html
db_core/ops/: index.html  trait.Connect.html  trait.DBOps.html  trait.GetConnection.html  trait.Migrate.html
db_core/prelude/: index.html
db_core/tests/: fn.duplicate_secret_guard_works.html  fn.duplicate_username_and_email.html  fn.email_register_works.html  fn.gists_work.html  fn.privacy_works.html  fn.username_register_works.html  fn.visibility_works.html  index.html
db_sqlx_postgres/: all.html  enum.ConnectionOptions.html  index.html  sidebar-items.js  struct.Conn.html  struct.Database.html  struct.Fresh.html
db_sqlx_postgres/dev/: attr.async_trait.html  enum.DBError.html  enum.Error.html  enum.GistPrivacy.html  enum.GistVisibility.html  fn.map_register_err.html  index.html  sidebar-items.js  struct.CreateGist.html  struct.CreateGistComment.html  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Gist.html  struct.GistComment.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.CloneGPDatabse.html  trait.CloneGistDatabase.html  trait.Connect.html  trait.DBOps.html  trait.GPDatabse.html  trait.GetConnection.html  trait.GistDatabase.html  trait.Migrate.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_postgres/errors/: fn.map_register_err.html
db_sqlx_postgres/prelude/: enum.DBError.html  enum.GistPrivacy.html  enum.GistVisibility.html  index.html  sidebar-items.js  struct.CreateGist.html  struct.CreateGistComment.html  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Gist.html  struct.GistComment.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.CloneGPDatabse.html  trait.CloneGistDatabase.html  trait.Connect.html  trait.DBOps.html  trait.GPDatabse.html  trait.GetConnection.html  trait.GistDatabase.html  trait.Migrate.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_sqlite/: all.html  enum.ConnectionOptions.html  index.html  sidebar-items.js  struct.Conn.html  struct.Database.html  struct.Fresh.html
db_sqlx_sqlite/dev/: attr.async_trait.html  enum.DBError.html  enum.Error.html  enum.GistPrivacy.html  enum.GistVisibility.html  index.html  sidebar-items.js  struct.CreateGist.html  struct.CreateGistComment.html  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Gist.html  struct.GistComment.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.CloneGPDatabse.html  trait.CloneGistDatabase.html  trait.Connect.html  trait.DBOps.html  trait.GPDatabse.html  trait.GetConnection.html  trait.GistDatabase.html  trait.Migrate.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_sqlite/errors/: fn.map_register_err.html  index.html  sidebar-items.js
db_sqlx_sqlite/prelude/: enum.DBError.html  enum.GistPrivacy.html  enum.GistVisibility.html  index.html  sidebar-items.js  struct.CreateGist.html  struct.CreateGistComment.html  struct.Creds.html  struct.EmailRegisterPayload.html  struct.Gist.html  struct.GistComment.html  struct.Password.html  struct.UpdateEmailPayload.html  struct.UpdateUsernamePayload.html  struct.UsernameRegisterPayload.html  trait.CloneGPDatabse.html  trait.CloneGistDatabase.html  trait.Connect.html  trait.DBOps.html  trait.GPDatabse.html  trait.GetConnection.html  trait.GistDatabase.html  trait.Migrate.html  type.BoxDynError.html  (+1 more)
docs/: ecosystem.md
gists/: all.html  constant.CACHE_AGE.html  constant.GIT_COMMIT_HASH.html  constant.PKG_DESCRIPTION.html  constant.PKG_HOMEPAGE.html  constant.PKG_NAME.html  constant.V1_API_ROUTES.html  constant.VERSION.html  fn.get_identity_service.html  fn.get_json_err.html  fn.main.html  index.html  struct.Settings.html  type.AppData.html  type.DB.html
gitpad/: all.html  constant.CACHE_AGE.html  constant.GIT_COMMIT_HASH.html  constant.PKG_DESCRIPTION.html  constant.PKG_HOMEPAGE.html  constant.PKG_NAME.html  constant.V1_API_ROUTES.html  constant.VERSION.html  fn.get_identity_service.html  fn.get_json_err.html  fn.main.html  index.html  sidebar-items.js  struct.FILES.html  struct.Settings.html  type.AppData.html  type.DB.html
scripts/: ci.sh
src/: db.rs  demo.rs  errors.rs  main.rs  routes.rs  settings.rs  tests.rs  utils.rs
website/: .gitignore  config.toml
(+1606 files in other folders)
