[package]
name = "db-core"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/realaravinth/gitpad"
repository = "https://github.com/realaravinth/gitpad"
documentation = "https://github.con/realaravinth/gitpad"
readme = "https://github.com/realaravinth/gitpad/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
thiserror = "1.0.30"
serde = { version = "1", features = ["derive"]}

[features]
default = []
test = []

[dev-dependencies]
serde_json = "1"
